--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "youtube-translator",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Add translations for youtube video titles and descriptions.",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "@MartinPascale",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/translate": "^8.0.2",
-    "body-parser": "^1.20.2",
+    "@google-cloud/translate": "^8.2.0",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "googleapis": "^129.0.0",
-    "nodemon": "^3.0.2"
+    "express": "^4.19.2",
+    "google-auth-library": "^9.7.0",
+    "googleapis": "^134.0.0"
   }
 }
